fixes for longer logos in nav on mobile - height, spacing, and extra declaration

--- a/static/css/cards/flag.css
+++ b/static/css/cards/flag.css
@@ -143,8 +143,12 @@ html.msb .masthead {
 
 @media(max-width: 660px) {
   .logo {
-    height: 20px;
+    height: 18px;
   }
+}
+
+.subscribe-link {
+  font-weight: bold;
 }
 
 .flag-account {
@@ -181,7 +185,7 @@ html.msb .masthead {
 }
 
 .msb .flag-nav {
-  --scrollbar-foreground: var(--sub-secondary-text-color);
+  --scrollbar-foreground: var(--secondary-text-color);
 }
 
 .flag-nav .separator ~ * {
@@ -205,7 +209,7 @@ html.msb .masthead {
 
   .flag {
     padding: 0;
-    column-gap: var(--space-sm);
+    column-gap: 0;
     grid-template-columns: auto 1fr;
     grid-template-areas: "bottom top";
   }
@@ -221,6 +225,7 @@ html.msb .masthead {
   .flag-top {
     grid-template-columns: auto 1fr;
     grid-template-areas: "middle right";
+    gap: var(--space-sm);
   }
 
   .flag-bottom {
@@ -285,6 +290,7 @@ html.msb .masthead {
 @media (max-width: 767px) {
   .logo {
     width: auto;
+    max-width: 170px;
     margin-left: 0;
   }
   
